--- a/src/app/encryption-text-text/encryption-text-text.component.css
+++ b/src/app/encryption-text-text/encryption-text-text.component.css
@@ -1,3 +1,6 @@
-.card-content-margin {
+.card-content-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   margin: 16px;
 }
