--- a/src/app/text-input/text-input.component.css
+++ b/src/app/text-input/text-input.component.css
@@ -1,5 +1,4 @@
 .right {
     display: flex;
     flex-direction: row-reverse;
-    width: 100%;
 }
